[package]
name = "dao"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "diagon"
path = "src/main.rs"

[dependencies]
# Async runtime
smol = "2.0"
async-lock = "3.4"
async-channel = "2.3"
futures-lite = "2.3"

# Crypto
sha2 = "0.10"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
bincode = "1.3"
hex = "0.4"
argon2 = "0.5.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true